--- a/templates/layout.html
+++ b/templates/layout.html
@@ -54,7 +54,7 @@
                                 {% endif %}
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('education.health_tips') }}">Health Tips & Articles</a>
+                               <a class="nav-link" href="{{ url_for('education.symptom_checker') }}">Health Tips & Articles</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ url_for('core.logout') }}">Logout</a>
