--- a/templates/layout.html
+++ b/templates/layout.html
@@ -59,7 +59,7 @@
                                 </li>
                             {% elif session['role'] == 'doctor' %}
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{{ url_for('appointment.doctor_schedule') }}">Appointments</a>
+                                    <a class="nav-link" href="{{ url_for('appointment.doctor_own_schedule') }}">Appointments</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="{{ url_for('core.doctor_dashboard') }}">Dashboard</a>
