Added Health tips

--- a/education/templates/education/health_tips.html
+++ b/education/templates/education/health_tips.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<h1 class="mb-4">Health Tips & Articles</h1>
+<h1>Health Tips & Articles</h1>
 
 <!-- Health Tips Videos Section -->
 <h2>Health Tips Videos</h2>
