--- a/templates/layout.html
+++ b/templates/layout.html
@@ -43,14 +43,12 @@
         <!-- Navigation Bar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
             <div class="container">
-                <a class="navbar-brand" href="{{ url_for('core.home') }}">MediConnect</a>
+                <a class="navbar-brand fw-bold" href="{{ url_for('core.home') }}">MediConnect</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-        
-
                         {% if 'loggedin' in session %}
                         {% if session['role'] == 'pharmacy' %}
                         <li class="nav-item">
@@ -68,26 +66,30 @@
                             <a class="nav-link" href="{{ url_for('core.list_pharmacies') }}">Pharmacies</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('education.symptom_checker') }}">Symptom Checker</a>
+                            <a class="nav-link" href="{{ url_for('education.symptom_checker') }}">Health Tips &
+                                Articles</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('education.health_tips') }}">Health Tips</a>
+                            <a class="nav-link" href="{{ url_for('consultation.request_video_consultation') }}">Video
+                                Consultation</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('core.logout') }}">Logout</a>
                         </li>
                         {% elif session['role'] == 'doctor' %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('appointment.doctor_schedule') }}">Appointments</a>
+                            <a class="nav-link" href="{{ url_for('appointment.doctor_own_schedule') }}">Appointments</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('core.doctor_dashboard') }}">Dashboard</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('education.symptom_checker') }}">Symptom Checker</a>
+                            <a class="nav-link" href="{{ url_for('education.symptom_checker') }}">Health Tips &
+                                Articles</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('education.health_tips') }}">Health Tips</a>
+                            <a class="nav-link" href="{{ url_for('consultation.request_video_consultation') }}">Video
+                                Consultation</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('core.logout') }}">Logout</a>
@@ -95,9 +97,6 @@
                         {% endif %}
                         {% else %}
                         <!-- Guest navigation -->
-                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('education.health_tips') }}">Health Tips</a>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('core.login') }}">Login</a>
                         </li>
