--- a/templates/layout.html
+++ b/templates/layout.html
@@ -66,7 +66,7 @@
                             <a class="nav-link" href="{{ url_for('core.list_pharmacies') }}">Pharmacies</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('education.symptom_checker') }}">Health Tips &
+                            <a class="nav-link" href="{{ url_for('education.health_tips') }}">Health Tips &
                                 Articles</a>
                         </li>
                         <li class="nav-item">
@@ -84,7 +84,7 @@
                             <a class="nav-link" href="{{ url_for('core.doctor_dashboard') }}">Dashboard</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('education.symptom_checker') }}">Health Tips &
+                            <a class="nav-link" href="{{ url_for('education.health_tips') }}">Health Tips &
                                 Articles</a>
                         </li>
                         <li class="nav-item">
