--- a/templates/layout.html
+++ b/templates/layout.html
@@ -70,7 +70,7 @@
                                 Articles</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Video
+                            <a class="nav-link" href="{{ url_for('consultation.request_video_consultation') }}">Video
                                 Consultation</a>
                         </li>
                         <li class="nav-item">
@@ -88,7 +88,7 @@
                                 Articles</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Video
+                            <a class="nav-link" href="{{ url_for('consultation.request_video_consultation') }}">Video
                                 Consultation</a>
                         </li>
                         <li class="nav-item">
